<resources>
    <string name="app_name">Share Mobility</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">Stad</string>
    <string name="amount_of_results">Aantal resultaten: </string>
    <string name="filters">Filters</string>
    <string name="main">Algemeen</string>
    <string name="brand">Merk</string>
    <string name="model">Model</string>
    <string name="license_plate">Kenteken</string>
    <string name="km">Kilometer stand</string>
    <string name="type">Type</string>
    <string name="fuel_type">Brandstof type</string>
    <string name="years_owned">Hoeveel jaar in bezit</string>
    <string name="location">Locatie</string>
    <string name="street">Straat</string>
    <string name="street_number">nr</string>
    <string name="street_number_addition">Toevoeging</string>
    <string name="zipcode">Postcode</string>
    <string name="financial">Financieel</string>
    <string name="purchase_price">Aanschaf waarde</string>
    <string name="price_per_hour">Prijs per uur</string>
    <string name="add_car">Aanbieden</string>
    <string name="price_per_day">Prijs per dag</string>
    <string name="from">van</string>
    <string name="till">tot</string>
    <string name="add">Toevoegen</string>
    <string name="required">Verplicht</string>
    <string name="email">E-Mail</string>
    <string name="password">Wachtwoord</string>
    <string name="forgot_password">Wachtwoord vergeten?</string>
    <string name="login">Inloggen</string>
    <string name="no_account_yet">Nog geen account?</string>
    <string name="youre_cars">Uw auto\'s</string>
    <string name="rented">Gehuurd</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Achternaam</string>
    <string name="registrate">Registreren</string>
    <string name="already_got_account">Ik heb al een account</string>
    <string name="accept_terms_and_conditions">Akkoord algemene voorwaarden</string>
    <string name="total_price">Totaal prijs</string>
    <string name="tco">TCO</string>
    <string name="usage_cost">Verbruikkosten</string>
    <string name="home">Home</string>
    <string name="profile">Profiel</string>
    <string name="logout">Uitloggen</string>
    <string name="communicate">Communicatie</string>
    <string name="share">Delen</string>
    <string name="rate">Beoordelen</string>
    <string name="open">Open</string>
    <string name="close">Sluiten</string>
    <string name="car_icon_description">car icon</string>
    <string name="map">Map</string>
    <string name="search">Zoek nu</string>
    <string name="Rent">Huren</string>
    <string name="radius">Radius</string>
    <string name="LastKnownLocationIconTitle">Jij</string>
    <string name="NoLocationPermissionDescription">Zonder het accepteren van de permissies kunnen wij uw locatie niet tonen. Wilt u alsnog de permissie toekennen?</string>
    <string name="Yes">Ja</string>
    <string name="No">Nee</string>
    <string name="EnableGpsWarning">GPS aanzetten</string>
    <string name="CannotDetermineLocation">Kan de locatie niet vinden</string>
    <string name="filter">Filter</string>
    <string name="value">waarde</string>
    <string name="milage">Kilometerstand</string>
    <string name="terms_of_pickup">Voorwaarden afhalen</string>
    <string name="terms_of_return">Voorwaarden retour</string>
    <string name="edit">Verander gegevens</string>
    <string name="carowner">Verhuurder</string>
    <string name="caruser">Huurder</string>
    <string name="registration_address">Adres</string>
    <string name="euroSign">€</string>
    <string name="terms">Voorwaarden</string>
    <string name="pickupTerms">Voorwaarden ophalen</string>
    <string name="returnTerms">Voorwaarden terugbrengen</string>
    <string name="rent">Huur</string>
    <string name="username">Gebruikersnaam</string>
    <string name="account_creation_reason">Waar wilt u de applicatie voornamelijk voor gebruiken?</string>
    <string name="renting">Huren</string>
    <string name="leasing">Verhuren</string>
    <string name="starting_date">Start datum</string>
    <string name="ending_date">Eind datum</string>
    <string name="terms_and_conditions_title">Algemene voorwaarden</string>
    <string name="fotos">Foto\'s</string>
    <string name="address">Adres</string>

    <!--dit is dummy data-->
    <string-array name="types">
        <item>ICE</item>
        <item>BEV</item>
        <item>FCEV</item>
    </string-array>
    <string-array name="fuels">
        <item>GASOLINE</item>
        <item>DIESEL</item>
        <item>LPG</item>
    </string-array>
    <string name="terms_and_conditions">Huurder verklaart akkoord te gaan met de algemene voorwaarden van ShareMobility. Verhuurder verklaart dat de auto op het moment van de aanvraag van de huurperiode in deugelijke staat verkeert. Zowel huurder als de in het vontract genomede bestuurders zijn hoodelijk aansprakelijk voor nakomen van alle verplichtingen die ui dit contract voortvloeien.</string>
    <string name="SomethingWentWrongTryAgainLater">Er is iets misgegaan, probeer het later nog eens.</string>
    <string name="WrongUsernamePassword">Verkeerde gebruikersnaam / wachtwoord</string>
    <string name="NoReservations">Geen reserveringen</string>
    <string name="SelectDates">Selecteer datums</string>
    <string name="PleaseSelectDates">Graag datums selecteren</string>
    <string name="ApproveTerms">Graag akkoord met de algemene voorwaarden</string>
    <string name="NetworkError">Netwerkfout</string>
    <string name="NoCameraPermissionDescription">Zonder het accepteren van de permissies kunt u geen gebruik maken van deze functie.</string>
    <string name="UserNotFound">Gebruiker niet gevonden, gelieve (opnieuw) in te loggen.</string>
    <string name="SomethingWentWrongCheckInput">Er is iets misgegaan, controleer uw invoer.</string>
    <string name="RegistrationSuccesvol">Registratie succesvol</string>
</resources>