...
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/login_password" />

            <TextView
                android:id="@+id/not_yet_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_account_yet"
                app:layout_constraintTop_toBottomOf="@id/login_login_button" />

...
